FreeST/test/Programs/InvalidTests/SessionTypes/typedefSkip/typedefSkip.fst
type T = Close

main : (T, T)
main = new @T ()
